finalizo las consignas

--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,9 @@
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
 }
+.contenedor{
+  display: flex;
+  flex-direction: column;
+  background-color: #242424;
+  
+}
