--- a/src/components/NavBar/navbar.css
+++ b/src/components/NavBar/navbar.css
@@ -1,9 +1,11 @@
+
 .lista{
     list-style-type: none;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-around;
+    background-color: #242424;
 }
 
 .lista > li > a {
